@@ -17,7 +17,6 @@ package feign.auth;
 
 import feign.RequestInterceptor;
 import feign.RequestTemplate;
-import sun.misc.BASE64Encoder;
 
 import java.nio.charset.Charset;
 
@@ -64,6 +63,7 @@ public class BasicAuthRequestInterceptor implements RequestInterceptor {
    * response would be to pull the necessary portions of Guava's BaseEncoding class into Util.
    */
   private static String base64Encode(byte[] bytes) {
-    return new BASE64Encoder().encode(bytes);
+    return Base64.encode(bytes);
   }
 }
+
